--- a/screener/src/hex-mask.css
+++ b/screener/src/hex-mask.css
@@ -27,8 +27,8 @@
   .hex-inner {
     width: 100%;
     height: 100%;
-    background: #006644;
-    border: 1px solid black;
+    background: white;
+    border: none;
     clip-path: polygon(
       50% 0%,
       93.3% 25%,
